...
            if #available(iOS 14, *) {
                HStack {
                    Button(action: {
                        self.index = 1
                        self.offset = 0
                    }) {
                        TabButtonView(image: GEImage.calendar, text: "일정", index: self.$index, buttonIndex: 1)
                    }
                    Button(action: {
                        self.index = 2
                        self.offset = -self.width
                    }) {
                        TabButtonView(image: GEImage.meal, text: "급식", index: self.$index, buttonIndex: 2)
                    }
                    
                    Button(action: {
                        self.index = 3
                        self.offset = -self.width * 2
                    }) {
                        TabButtonView(image: GEImage.notice, text: "공지", index: self.$index, buttonIndex: 3)
                    }
                    
                    Button(action: {
                        self.index = 4
                        self.offset = -self.width * 3
                    }) {
                        TabButtonView(image: GEImage.introduce, text: "소개", index: self.$index, buttonIndex: 4)
                    }
                    Button(action: {
                        self.index = 5
                        self.offset = -self.width * 4
                    }) {
                        TabButtonView(image: GEImage.mypage, text: "내 정보", index: self.$index, buttonIndex: 5)
                    }
                }
            } else {
                HStack {
                    Button(action: {
                        self.index = 1
...
