...
    }
    
    var body: some View {
        GeometryReader { _ in
            ZStack {
                VStack(spacing: 40) {
                    TitleTextView(text: "로그인")
                        .padding(.bottom, UIFrame.UIHeight / 15)
                    
                    VStack(alignment: .leading) {
                        VStack(spacing: 30) {
                            CustomTextField(isLogin: true, text: self.$loginVM.id, placeholder: "이메일을 입력해주세요", image: GEImage.person, errorMsg: self.$loginVM.errorMsg)
                            PasswordTextField(isLogin: true, errorMsg: .constant(""), text: self.$loginVM.password, isHidden: self.$loginVM.isHidden)
...
                    GEImage.lock
                        .modifier(Template())
                        .frame(width: 15, height: 20)
                }
                
                if self.isHidden {
                    SecureField("비밀번호를 입력해주세요", text: $text)
                } else {
                    TextField("비밀번호를 입력해주세요", text: $text)
                }
                
                if text != "" {
                    Button(action: {
...
